@@ -15,6 +15,7 @@
 #include "tao/Resume_Handle.h"
 #include "tao/Thread_Lane_Resources.h"
 #include "tao/Wait_Strategy.h"
+#include "ace/os_include/netinet/os_tcp.h"
 
 #if !defined (__ACE_INLINE__)
 # include "SSLIOP_Connection_Handler.i"
