@@ -1,3 +1,8 @@
+Tue Nov  4 16:48:54 UTC 2003  Don Hinton  <dhinton@dresystems.com>
+
+        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
+          Added #include os_tcp.h needed when ssl=1.
+
 Tue Nov  4 08:18:37 UTC 2003  Don Hinton  <dhinton@dresystems.com>
 
         * docs/tutorials/Quoter/RT_Event_Service/client.cpp:
